[package]
name = "headless_chrome_operation_map"
version = "0.1.4"
edition = "2021"
authors = ["xiaoai <2506377990@qq.com>"]
license = "MIT"
description = "headless chrome operation map"
repository = "https://github.com/aishuaikang/headless_chrome_operation_map"


[dependencies]
headless_chrome = { version = "1.0.15", git = "https://github.com/rust-headless-chrome/rust-headless-chrome", features = ["fetch"] }
[dev-dependencies]
serial_test = "3.1.1"