[package]
authors = ["xiaoai <2506377990@qq.com>"]
description = "headless chrome operation map"
edition = "2021"
license = "MIT"
name = "headless_chrome_operation_map"
repository = "https://github.com/aishuaikang/headless_chrome_operation_map"
version = "0.2.1"

[dependencies]
anyhow = "1.0.92"
headless_chrome = { version = "1.0.15", git = "https://github.com/rust-headless-chrome/rust-headless-chrome", features = [
    "fetch",
] }
nix = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.67"
winapi = { version = "0.3.9", features = [
    "winuser",
    "processthreadsapi",
    "handleapi",
    "winnt",
] }
[dev-dependencies]
serial_test = "3.1.1"
