[package]
name = "headless_chrome_operation_map"
version = "0.2.2"
authors = ["xiaoai <2506377990@qq.com>"]
edition = "2021"
description = "headless chrome operation map"
license = "MIT"
repository = "https://github.com/aishuaikang/headless_chrome_operation_map"
readme = "README.md"

[dependencies]
anyhow = "1.0.92"
headless_chrome_xiaoai = { version = "1.0.16", features = ["fetch"] }
# headless_chrome = { version = "1.0.15", git = "https://github.com/rust-headless-chrome/rust-headless-chrome", features = [
#     "fetch",
# ] }
# headless_chrome = { path = "../headless-chrome-xiaoai", features = ["fetch"] }
nix = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.67"
winapi = { version = "0.3.9", features = [
    "winuser",
    "processthreadsapi",
    "handleapi",
    "winnt",
] }
[dev-dependencies]
serial_test = "3.1.1"
